fix card alignment in small screens

--- a/style.css
+++ b/style.css
@@ -1,44 +1,54 @@
 * {
-    border: 0;
-    padding: 0;
-    box-sizing: border-box;
+  border: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #df960fb6;
+  background-color: #df960fb6;
 }
 
 h1 {
-    margin-top: 30px;
-    text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 50px;
+  margin-top: 30px;
+  text-align: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 50px;
 }
 
 #curriculos {
-    margin-top: 40px;
-    margin-bottom: 40px;
-
+  margin-top: 40px;
+  margin-bottom: 40px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  justify-items: center;
 }
 
-#curriculos img {
-    border-radius: 100%;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.616);
-}
 
 .img {
-    margin-left: 2%;
-    padding: 50px;
-    background-color: #ec1f10;
-    display: inline-block;
-    border-radius: 10px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.616);
+  margin-left: 2%;
+  padding: 50px;
+  background-color: #ec1f10;
+  display: inline-block;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.616);
 }
 
 h2 {
-    text-align: center;
+  text-align: center;
 }
 
 p {
-    text-align: center;
+  text-align: center;
+}
+
+img
+.member-card {
+  display: inline-block;
+}
+
+.member-card img {
+  border-radius: 100%;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.616);
+
 }
